--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">BudgetWatcher</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_sync_sms">Sync with local SMS database</string>
+    <string name="action_sync_network">Sync with Google drive base</string>
 
     <string-array name="drawer_options">
         <item>Home</item>
