--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,9 +4,13 @@
     <string name="action_sync_sms">Sync with local SMS database</string>
     <string name="action_sync_network">Sync with Google drive base</string>
 
-    <string-array name="drawer_options">
-        <item>Home</item>
-        <item>Statistic</item>
-        <item>Settings</item>
-    </string-array>
+    <string name="title_activity_add_tags">Add Tags</string>
+
+    <string name="drawer_home">Home</string>
+    <string name="drawer_statistic">Statistic</string>
+    <string name="drawer_settings">Settings</string>
+    <string name="create_tag">Create Tag</string>
+    <string name="delete">Delete</string>
+    <string name="title_operation_list">Operations</string>
+    <string name="title_operation_detail">Operation Detail</string>
 </resources>
